SLES SP4 FCP document

--- a/hu_centos_69.adoc
+++ b/hu_centos_69.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_centos_69.html
-keywords: host utilities, cent, os, 6.9, netapp, ontap
+keywords: host utilities, cent, os, 6.9, netapp, ontap, linux
 summary: Describes how to use CentOS 6.9 with ONTAP
 ---
 
